2013-06-09  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an LHAPDF_VERSION_CODE macro for version detection.

	* Moving contents of Config.h -> Version.h (leaving Config.h name free for potential Info subclass).

	* Adding PDFSet::mkPDF(int).

	* Renaming return-type specialisations of Info::metadata() to
	metadata_to(), to avoid nasty template/untemplated method
	resolution errors once inheritance got involved.

	* Removing various deprecated path constructors and general
	related API rehashing.

	* Adding Info::metadata_local(key)

	* Renaming config() to getConfig() and moving to Factories, to
	match getPDFSet(name).

	* Using a new info cascading system including PDFSet.

	* Adding singleton system for PDFSet, and a dedicated PDFInfo type
	for member info.

2013-06-07  Andy Buckley  <andy.buckley@cern.ch>

	* Rename ImplicitFlavorAction config flag to UndefFlavorAction

	* More build system tweaks, including removal of yaml-cpp flags
	from build of example programs that link against libLHAPDF.

	* Moving broken -I/-L and -D flag settings from configure.ac to
	selected Makefile.am's

	* Adding PDFSet, and migrating examples/testpdfset.cc to use it.

2013-05-17  Andy Buckley  <andy.buckley@cern.ch>

	* Treat a request for PID = 0 as if PID 21 (gluon) had been
	requested. Useful for backward compatibility, but also just for
	convenience since it's much easier to just loop from -6 to 6 than
	to have to skip 0 and add 21 as a special case.

2013-05-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding x/Q2/Q min/max (virtual) functions to the PDF
	interface. Default implementations use metadata keys only.

	* Adding in-place filling functions for map and vector PDF value
	containers, on the PDF interface.

2013-05-11  Andy Buckley  <andy.buckley@cern.ch>

	* configure.ac, src/Info.cc: Re-adding yaml-cpp 0.3.x support via
	version detection in the configure script.

2013-05-07  Andy Buckley  <andy.buckley@cern.ch>
